css/style.css
* {
    box-sizing: border-box;
}

body {
    max-width: 70%;
    line-height: 1.25;
    margin: 0 auto;
    color: #F26DF9;
    background-color: #5158BB;
    font-family: 'Cardo', serif;
    background-image: url("../images/gameboard-bg.jpg");
    background-size: cover;
}

h1 {
    font-size: 54px;
    text-align: center;
    font-family: 'Montserrat', sans-serif;
    font-weight: 900;
    color: #F26DF9;
    text-shadow: 2px 2px 5px #000000;
    padding-top: 15px;
}

h2 {
  font-size: 24px;
}

h3 {
    font-size: 36px;
}

h4 {
    font-size: 100px;
    margin: 0;
}

button {
  outline: none;
}

span:hover {
    animation: .25s move-up linear;
}

.start-screen {
    height: 475px;
    font-size: 28px;
    text-shadow: 1px 1px 2px #02394A;
    text-align: center;
    padding: 20px;
    margin: 20px auto;
    background-color: #5158BB;
    box-shadow: 0 8px 16px 0 #000000;
    animation: color-change 4s linear infinite alternate-reverse;
}

.emoji-ticker {
    font-size: 50px;
    padding: 40px;
    overflow: hidden;
    /* animation from animista */
    animation: bounce-top 0.9s both;
}

.start-button {
  font-size: 40px;
  animation: grow 2s ease-in infinite;
}

.game-screen {
    display: none;
}

.gameboard {
    display: flex;
    justify-content: space-around;
    align-items: flex-end;
    padding: 20px;
    margin: 20px auto;
    background-color: #5158BB;
    box-shadow: 0 8px 16px 0 #000000;
}

.emoji-board {
    position: relative;
    width: 70%;
    padding: 10px;
}

.emojis {
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
}

.emoji {
    font-size: 90px;
    width: 20%;
    margin: 5px;
    background-color: transparent;
    border: none;
    text-align: center;
}

.emoji:hover {
    box-shadow: 0 8px 16px 3px #EB4B98;
    animation: .25s move-button-up linear;
}

.answer {
    font-size: 24px;
}

.game-info {
    text-align: center;
    padding: 10px;
    font-size: 20px;
}

.buttons, .questions {
    cursor: pointer;
    font-size: 24px;
}

.modal-box, .win-box, .lose-box {
    display: none;
    background-color: #043565;
    border: 3px #F26DF9 solid;
    width: 40%;
    position: absolute;
    text-align: center;
    height: auto;
    top: 20%;
    left: 0;
    right: 0;
    margin: auto;
    padding: 20px;
}

.win-box, .lose-box {
    /* animation from animista */
    animation: puff-in-center 0.7s cubic-bezier(0.470, 0.000, 0.745, 0.715) both;
}

.continue-button {
    padding: 10px;
}

.eliminate {
    opacity: .3;
}

.speech-bubble {
  display: none;
  position: relative;
  margin: 0 auto;
  width: 70%;
  border-radius: 10px;
  background-color: #043565;
  box-shadow: #02394A 3px 3px 3px;
  bottom: 10px;
  animation: bounce-up 1s ease-in .5s infinite;
}

.speech-bubble:after {
	content: '';
	position: absolute;
	bottom: 10px;
	left: 50%;
	width: 0;
	height: 0;
	border: 20px solid transparent;
	border-top-color: #043565;
	border-bottom: 0;
	margin-left: -20px;
  margin-bottom: -20px;
  filter: drop-shadow( #02394A 3px 3px 3px);
}

.speech-bubble-message {
  padding: 10px;
  font-size: 12px;
}

.guess-emoji-container {
    text-shadow: 1px 1px 2px #02394A;
    padding-top: 50px;
}

.guess-emoji {
  position: relative;
  padding: 70px 0px 60px 0px;
}

.center {
  width: 100%;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.question-mark {
  z-index: 5;
  font-size: 30px;
  padding-bottom: 25px;
}

.emoji-profile {
  font-size: 60px;
}

.scoreboard {
    margin-top: 24px;
    text-shadow: 1px 1px 2px #02394A;
}

.ask-section {
    text-align: center;
}

.buttons, .questions {
    padding: 5px 15px;
    margin: 10px 5px;
    color: #02394A;
    background-color: #F26DF9;
    box-shadow: 0 8px 16px 0 #000000;
    transition: .5s ease-in .25s;
}

.line-break {
  background-color: #043565;
  width: 1px;
  height: 400px;
}

.buttons:hover {
    background-color: #EB4B98;
}

.message {
    font-size: 60px;
    text-shadow: 3px 3px 6px #02394A;
    margin: 0;
}

@keyframes grow {
  0% {
    font-size: 40px;
    padding: 15px 30px;
  }
  50% {
    font-size: 50px;
    padding: 15px 30px;
  }
  100% {
    font-size: 40px;
    padding: 15px 30px;
  }
}

@keyframes bounce-up {
  0% {
    position: relative;
    bottom: 0;
  }
  50% {
    position: relative;
    bottom: 10px;
  }
  100% {
    position: relative;
    bottom: 0;
  }
}

@keyframes color-change {
    0% {
      background-color: #5158BB;
    }
    
    100% {
      background-color: #043565;
    }
  }

@keyframes move-up {
      0% {
          position: relative;
          bottom: 0;
      }
      100% {
        position: relative;
        bottom: 30px;
      }
  }

@keyframes move-button-up {
    0% {
        position: relative;
        bottom: 0;
    }
    100% {
      position: relative;
      bottom: 15px;
    }
}

   /* ----------------------------------------------
 * Generated by Animista on 2018-8-20 9:26:34
 * w: http://animista.net, t: @cssanimista
 * ---------------------------------------------- */

/**
 * ----------------------------------------
 * animation puff-in-center
 * ----------------------------------------
 */
@-webkit-keyframes puff-in-center {
    0% {
      -webkit-transform: scale(2);
              transform: scale(2);
      -webkit-filter: blur(2px);
              filter: blur(2px);
      opacity: 0;
    }
    100% {
      -webkit-transform: scale(1);
              transform: scale(1);
      -webkit-filter: blur(0px);
              filter: blur(0px);
      opacity: 1;
    }
  }
  @keyframes puff-in-center {
    0% {
      -webkit-transform: scale(2);
              transform: scale(2);
      -webkit-filter: blur(2px);
              filter: blur(2px);
      opacity: 0;
    }
    100% {
      -webkit-transform: scale(1);
              transform: scale(1);
      -webkit-filter: blur(0px);
              filter: blur(0px);
      opacity: 1;
    }
  }
  
  /**
 * ----------------------------------------
 * animation bounce-top
 * ----------------------------------------
 */
@-webkit-keyframes bounce-top {
  0% {
    -webkit-transform: translateY(-45px);
            transform: translateY(-45px);
    -webkit-animation-timing-function: ease-in;
            animation-timing-function: ease-in;
    opacity: 1;
  }
  24% {
    opacity: 1;
  }
  40% {
    -webkit-transform: translateY(-24px);
            transform: translateY(-24px);
    -webkit-animation-timing-function: ease-in;
            animation-timing-function: ease-in;
  }
  65% {
    -webkit-transform: translateY(-12px);
            transform: translateY(-12px);
    -webkit-animation-timing-function: ease-in;
            animation-timing-function: ease-in;
  }
  82% {
    -webkit-transform: translateY(-6px);
            transform: translateY(-6px);
    -webkit-animation-timing-function: ease-in;
            animation-timing-function: ease-in;
  }
  93% {
    -webkit-transform: translateY(-4px);
            transform: translateY(-4px);
    -webkit-animation-timing-function: ease-in;
            animation-timing-function: ease-in;
  }
  25%,
  55%,
  75%,
  87% {
    -webkit-transform: translateY(0px);
            transform: translateY(0px);
    -webkit-animation-timing-function: ease-out;
            animation-timing-function: ease-out;
  }
  100% {
    -webkit-transform: translateY(0px);
            transform: translateY(0px);
    -webkit-animation-timing-function: ease-out;
            animation-timing-function: ease-out;
    opacity: 1;
  }
}

@keyframes bounce-top {
  0% {
    -webkit-transform: translateY(-45px);
            transform: translateY(-45px);
    -webkit-animation-timing-function: ease-in;
            animation-timing-function: ease-in;
    opacity: 1;
  }
  24% {
    opacity: 1;
  }
  40% {
    -webkit-transform: translateY(-24px);
            transform: translateY(-24px);
    -webkit-animation-timing-function: ease-in;
            animation-timing-function: ease-in;
  }
  65% {
    -webkit-transform: translateY(-12px);
            transform: translateY(-12px);
    -webkit-animation-timing-function: ease-in;
            animation-timing-function: ease-in;
  }
  82% {
    -webkit-transform: translateY(-6px);
            transform: translateY(-6px);
    -webkit-animation-timing-function: ease-in;
            animation-timing-function: ease-in;
  }
  93% {
    -webkit-transform: translateY(-4px);
            transform: translateY(-4px);
    -webkit-animation-timing-function: ease-in;
            animation-timing-function: ease-in;
  }
  25%,
  55%,
  75%,
  87% {
    -webkit-transform: translateY(0px);
            transform: translateY(0px);
    -webkit-animation-timing-function: ease-out;
            animation-timing-function: ease-out;
  }
  100% {
    -webkit-transform: translateY(0px);
            transform: translateY(0px);
    -webkit-animation-timing-function: ease-out;
            animation-timing-function: ease-out;
    opacity: 1;
  }
}

@media only screen and (max-width: 1024px) and (min-width: 861px) {
    h1 {
        font-size: 48px;
    }

    .emoji-ticker {
        font-size: 32px;
    }
}

@media only screen and (max-width: 860px) and (min-width: 731px) {
  h1 {
      font-size: 32px;
  }

  .start-screen {
    height: 450px;
  }

  .start-instructions {
    font-size: 24px;
  }

  .emoji-ticker {
      font-size: 26px;
  }

  @keyframes grow {
    0% {
      font-size: 30px;
      padding: 15px 30px;
    }
    50% {
      font-size: 40px;
      padding: 15px 30px;
    }
    100% {
      font-size: 30px;
      padding: 15px 30px;
    }
  }
}

@media only screen and (max-width: 730px) and (min-width: 604px) {
  h1 {
    font-size: 30px;
  }

  .start-screen {
    height: 425px;
  }

  .start-instructions {
    font-size: 20px;
  }

  .emoji-ticker {
      font-size: 26px;
  }

  @keyframes grow {
    0% {
      font-size: 24px;
      padding: 15px 30px;
    }
    50% {
      font-size: 34px;
      padding: 15px 30px;
    }
    100% {
      font-size: 24px;
      padding: 15px 30px;
    }
  }
}

@media only screen and (max-width: 603px) and (min-width: 431px) {
  body {
    max-width: 90%;
  }
  
  h1 {
    font-size: 28px;
  }

  .start-screen {
    width: 100%;
    height: 425px;
  }

  .start-instructions {
    font-size: 20px;
  }

  .emoji-ticker {
      font-size: 26px;
  }

  @keyframes grow {
    0% {
      font-size: 24px;
      padding: 15px 30px;
    }
    50% {
      font-size: 34px;
      padding: 15px 30px;
    }
    100% {
      font-size: 24px;
      padding: 15px 30px;
    }
  }
}

@media only screen and (max-width: 430px) and (min-width: 200px) {
  body {
    max-width: 90%;
  }
  
  h1 {
    font-size: 24px;
  }

  h4 {
    font-size: 80px;
  }

  .start-screen {
    width: 100%;
    height: 500px;
  }

  .start-instructions {
    font-size: 18px;
  }

  .emoji-ticker {
      font-size: 24px;
      padding: 30px;
  }

  .gameboard {
    flex-direction: column-reverse;
    align-items: center;
    padding: 10px;
  }

  .line-break {
    background-color: #043565;
    width: 95%;
    height: 1px;
  }

  .game-info {
    display: flex;
    width: 90%;
    align-items: center;
    justify-content: space-between;
    padding: 5px;
  }

  .guess-emoji-container {
    display: none;
  }

  .emoji-board {
    width: 100%;
    padding: 5px;
  }

  .emoji {
      font-size: 60px;
      width: 20%;
      margin: 5px;
  }

  .questions {
    width: 95%;
  }

  .modal-box, .win-box, .lose-box {
    display: none;
    width: 80%;
  }

  .message {
    font-size: 50px;
  }

  @keyframes grow {
    0% {
      font-size: 24px;
      padding: 15px 30px;
    }
    50% {
      font-size: 34px;
      padding: 15px 30px;
    }
    100% {
      font-size: 24px;
      padding: 15px 30px;
    }
  }
}

@media only screen and (max-width: 392px) {
  h4 {
    font-size: 60px;
  }

  .win-box {
    padding: 10px;
  }

  .message {
    font-size: 40px;
  }
}

